# ai-toolkit

./: .flake8  .gitignore  Amazon Product Reviews.py  LICENSE  MNIST CNN  Makefile  README.md  Welcome_To_Colab.ipynb  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: task.yml
.github/workflows/: ci.yml
ai_toolkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bonus_app/: README.md  app.py  requirements_app.txt  utils.py
part1_theory/: outline.md
part2_practical/task1_iris_sklearn/: README.md  iris_classifier.ipynb  iris_pipeline.py
part2_practical/task2_mnist_cnn/: README.md  baseline_mnist_cnn.ipynb  mnist_pipeline.py
part2_practical/task3_spacy_reviews/: README.md  nlp_pipeline.py  spacy_ner_sentiment.ipynb
report/: ethics_and_optimization.md  report_outline.md
tests/: test_app_logic.py  test_iris.py  test_mnist.py  test_spacy.py
