[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-toolkit"
version = "0.1.0"

[tool.setuptools.packages.find]
include = ["part1_theory*", "part2_practical*", "bonus_app*"]

# --- ADD THIS NEW SECTION FOR PYTEST ---
[tool.pytest.ini_options]
asyncio_mode = "auto"